# skills

./: CLAUDE.md  README.md
feishu-image/: SKILL.md  cli.js  index.js  package.json
feishu-image/scripts/: feishu-image.js
git-commit/: SKILL.md
git-commit/scripts/: calver.py
mcp-deploy/: SKILL.md
media-use/: skill.md
media-use/scripts/ffmpeg_batch/: README.md  converter.py  pyproject.toml
os-use/: SKILL.md
tencent-docs/: SKILL.md  setup.sh
tencent-docs/references/: api_references.md  smartcanvas_references.md  smartsheet_references.md
video-analyzer/: SKILL.md
video-analyzer/scripts/: analyze.py  models.json  pyproject.toml
